@@ -69,7 +69,7 @@ public abstract class ConstructorAccess<T> {
 	abstract public T newInstance(Object enclosingInstance);
 
 	static public <T> ConstructorAccess<T> get(Class<T> type) {
-		Class enclosingType = type.getEnclosingClass();
+		Class<?> enclosingType = type.getEnclosingClass();
 		boolean isNonStaticMemberClass =
 				enclosingType != null && type.isMemberClass() && !Modifier.isStatic(type.getModifiers());
 
@@ -78,7 +78,7 @@ public abstract class ConstructorAccess<T> {
 		if (accessClassName.startsWith("java.")) {
 			accessClassName = "reflectasm." + accessClassName;
 		}
-		Class accessClass;
+		Class<?> accessClass;
 
 		AccessClassLoader loader = AccessClassLoader.get(type);
 		try {
@@ -98,7 +98,7 @@ public abstract class ConstructorAccess<T> {
 					if (!isNonStaticMemberClass) {
 						enclosingClassNameInternal = null;
 						try {
-							constructor = type.getDeclaredConstructor((Class[]) null);
+							constructor = type.getDeclaredConstructor((Class<?>[]) null);
 							modifiers = constructor.getModifiers();
 						}
 						catch (Exception ex) {
@@ -148,7 +148,7 @@ public abstract class ConstructorAccess<T> {
 		}
 		ConstructorAccess<T> access;
 		try {
-			access = (ConstructorAccess<T>) accessClass.newInstance();
+			access = (ConstructorAccess<T>) accessClass.getDeclaredConstructor().newInstance();
 		}
 		catch (Throwable t) {
 			throw new RuntimeException(
@@ -172,7 +172,7 @@ public abstract class ConstructorAccess<T> {
 		MethodVisitor mv = cw.visitMethod(ACC_PUBLIC, "<init>", "()V", null, null);
 		mv.visitCode();
 		mv.visitVarInsn(ALOAD, 0);
-		mv.visitMethodInsn(INVOKESPECIAL, superclassNameInternal, "<init>", "()V");
+		mv.visitMethodInsn(INVOKESPECIAL, superclassNameInternal, "<init>", "()V", false);
 		mv.visitInsn(RETURN);
 		mv.visitMaxs(1, 1);
 		mv.visitEnd();
@@ -184,7 +184,7 @@ public abstract class ConstructorAccess<T> {
 		mv.visitCode();
 		mv.visitTypeInsn(NEW, classNameInternal);
 		mv.visitInsn(DUP);
-		mv.visitMethodInsn(INVOKESPECIAL, classNameInternal, "<init>", "()V");
+		mv.visitMethodInsn(INVOKESPECIAL, classNameInternal, "<init>", "()V", false);
 		mv.visitInsn(ARETURN);
 		mv.visitMaxs(2, 1);
 		mv.visitEnd();
@@ -201,10 +201,10 @@ public abstract class ConstructorAccess<T> {
 			mv.visitVarInsn(ALOAD, 1);
 			mv.visitTypeInsn(CHECKCAST, enclosingClassNameInternal);
 			mv.visitInsn(DUP);
-			mv.visitMethodInsn(INVOKEVIRTUAL, "java/lang/Object", "getClass", "()Ljava/lang/Class;");
+			mv.visitMethodInsn(INVOKEVIRTUAL, "java/lang/Object", "getClass", "()Ljava/lang/Class;", false);
 			mv.visitInsn(POP);
 			mv.visitMethodInsn(INVOKESPECIAL, classNameInternal, "<init>",
-					"(L" + enclosingClassNameInternal + ";)V");
+					"(L" + enclosingClassNameInternal + ";)V", false);
 			mv.visitInsn(ARETURN);
 			mv.visitMaxs(4, 2);
 		}
@@ -213,7 +213,7 @@ public abstract class ConstructorAccess<T> {
 			mv.visitInsn(DUP);
 			mv.visitLdcInsn("Not an inner class.");
 			mv.visitMethodInsn(INVOKESPECIAL, "java/lang/UnsupportedOperationException", "<init>",
-					"(Ljava/lang/String;)V");
+					"(Ljava/lang/String;)V", false);
 			mv.visitInsn(ATHROW);
 			mv.visitMaxs(3, 2);
 		}
